<resources>
    <string name="app_name">Test Firebase Stack Mobile</string>
    <string name="oauth_client">1025059691024-s65vsl9t1ks0cejiprc8o7e71k3ekkap.apps.googleusercontent.com</string>

    <string name="title_form_sign_in">Cadastre-se</string>
    <string name="title_form_login">Login do usuário</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_passw">Senha</string>
    <string name="hint_firstname">Primeiro nome</string>
    <string name="hint_secondname">Sobrenome</string>


    <string name="button_sign_in_next">Próximo</string>
    <string name="button_sign_in_signin">Cadastrar</string>
    <string name="button_sign_in_back">Voltar para a página de login</string>

    <string name="button_login">Entrar</string>
    <string name="button_exit">Sair</string>
    <string name="button_notes_go">Ir para as anotações</string>
    <string name="button_forgot">Recuperar senha</string>

    <string name="txt_no_acc">Não tem uma conta? Cadastre-se</string>
    <string name="txt_forgot_passw">Esqueceu sua senha?</string>

    <string name="snackbar_sucess_sign_in">Cadastro efetuado com sucesso</string>
    <string name="snackbar_sucess_db_persondata">Dados pessoais enviados com sucesso</string>
    <string name="snackbar_blank">Preencha todos os campos</string>
    <string name="snackbar_fail_weakpassw_sign_in">"Senha mínima de 6 caracteres</string>
    <string name="snackbar_fail_invalid_credential">E-mail inválido</string>
    <string name="snackbar_fail_collision_sign_in">Conta já cadastrada</string>
    <string name="snackbar_fail_conection">Conexão indisponível</string>
    <string name="snackbar_fail_generic">Erro desconhecido</string>
    <string name="snackbar_fail_generic_auth">Erro na autenticação</string>
    <string name="snackbar_fail_generic_forgot">Erro ao recuperar senha</string>
    <string name="snackbar_fail_db_personal_data">Erro ao enviar dados pessoais</string>
    <string name="snackbar_check_email">Verifique seu e-mail</string>

    <string name="dialog_text_loading">Carregando</string>

</resources>