<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragacc_linlay_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".ui.form_sign_in.FormSignInActivity">

    <EditText android:id="@+id/fragacc_edit_email"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Edit"
        android:inputType="textWebEmailAddress"
        android:hint="@string/hint_email"/>

    <EditText android:id="@+id/fragacc_edit_passw"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Edit"
        android:inputType="textPassword"
        android:hint="@string/hint_passw"/>

    <Button android:id="@+id/fragacc_button_signin"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Button"
        android:text="@string/button_sign_in_signin"/>

    <Button android:id="@+id/fragacc_button_back"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Button"
        android:text="@string/button_sign_in_back"/>

</LinearLayout>
