<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".ui.form_sign_in.FormSignInActivity">


    <TextView android:id="@+id/login_txt_head"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Txt"
        android:layout_marginTop="120dp"
        android:text="@string/title_form_login"/>

    <EditText android:id="@+id/login_edit_email"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Edit"
        android:inputType="textWebEmailAddress"
        android:hint="@string/hint_email"/>

    <EditText android:id="@+id/login_edit_passw"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Edit"
        android:inputType="textPassword"
        android:hint="@string/hint_passw"/>

    <Button android:id="@+id/login_button_next"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Button"
        android:text="@string/button_login"/>

    <TextView android:id="@+id/login_txt_no_acc"
        style="@style/Theme.TestFirebaseStackMobile.TextNoAcc"
        android:text="@string/txt_no_acc_sig_in"/>


</LinearLayout>