<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signin_linlay_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_gray"
    tools:context=".ui.form_sign_in.FormSignInActivity">

    <EditText android:id="@+id/fragperson_edit_firstname"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Edit"
        android:inputType="textPersonName"
        android:hint="@string/hint_firstname"/>

    <EditText android:id="@+id/fragperson_edit_secondname"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Edit"
        android:inputType="textPersonName"
        android:hint="@string/hint_secondname"/>

    <Button android:id="@+id/fragperson_button_next"
        style="@style/Theme.TestFirebaseStackMobile.SignIn.Button"
        android:text="@string/button_sign_in_next"/>

</LinearLayout>